fix overflow of words on imgText

--- a/styles/PanelPdfLink.module.css
+++ b/styles/PanelPdfLink.module.css
@@ -12,7 +12,8 @@
 }
 
 .img {
-  width: 350px;
+  /* width: 350px; */
+  width: 400px;
   height: 600px;
   min-height: 100%;
   object-fit: cover;
@@ -25,18 +26,19 @@
   transform: translate(-50%, -50%) rotate(-11deg);
   text-align: center;
   /* font-size: 3rem !important; */
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
+  font-size: 2.25rem !important;
+  line-height: 1.75rem;
   /* letter-spacing: -0.125rem; */
   font-weight: 900;
   font-style: italic;
   min-width: 300px;
+  /* overflow-wrap: break-word;
   word-break: break-word;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   -ms-hyphens: auto;
+  hyphens: auto; */
   width: 101%;
-  hyphens: auto;
 }
 
 .info {
